fix alignment, make icons a tad smaller

--- a/style.css
+++ b/style.css
@@ -83,7 +83,6 @@ h1 a {
 #landing #links dt {
     grid-column: 1;
     text-align: right;
-    margin: 0 0 0.5rem 0;
 }
 
 #landing #links dd {
@@ -96,10 +95,10 @@ h1 a {
 }
 
 #landing #links dd>svg {
-    width: 1.5rem;
-    height: 1.5rem;
-    margin: -0.25rem 0 -0.25rem -1.75rem;
-    display: inline-block;
+    width: 1.25rem;
+    height: 1.25rem;
+    margin: 0 0 0 -1.75rem;
+    position: absolute;
 }
 #landing #links dd>svg+svg {
     margin: auto;
